--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "watch": "mix watch"
+        "dev": "mix",
+        "development": "mix",
+        "watch": "mix watch",
+        "start": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "browser-sync": "^2.29.3",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "sass": "^1.64.1",
+        "sass-loader": "^12.6.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.1",
+        "laravel-mix-purgecss": "^6.0.0"
     }
 }
