--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "private": true,
     "scripts": {
+        "vite": "vite",
+        "vuild": "vite build",
         "dev": "mix",
         "development": "mix",
         "watch": "mix watch",
@@ -19,6 +21,8 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.1",
-        "laravel-mix-purgecss": "^6.0.0"
+        "laravel-mix-purgecss": "^6.0.0",
+        "laravel-vite-plugin": "^0.7.8",
+        "vite": "^4.4.7"
     }
 }
