--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bootstrap": "^5.3.1",
         "laravel-mix-purgecss": "^6.0.0",
         "laravel-vite-plugin": "^0.7.8",
+        "localstorage-slim": "^2.4.0",
         "vite": "^4.4.7"
     }
 }
