--- a/packages/digiti/form-builder/composer.json
+++ b/packages/digiti/form-builder/composer.json
@@ -4,6 +4,11 @@
     "type": "project",
     "license": "MIT",
     "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "Digiti\\FormBuilder\\": "src"
+        }
+    },
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0",
