--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.0",
-        "livewire/livewire": "^3.0@beta"
+        "php": "^8.2",
+        "laravel/framework": "^11.0",
+        "livewire/livewire": "^3.5"
     },
     "extra": {
         "laravel": {
